weather-app-eap-cloud-ready/k8s/ose-prometheus.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: ose-prometheus
  namespace: redhat-jboss-eap-cloud-ready-demo
  labels:
    app: ose-prometheus
spec:
  replicas: 1
  selector:
    app: ose-prometheus
    deploymentconfig: ose-prometheus
  template:
    metadata:
      labels:
        app: ose-prometheus
        deploymentconfig: ose-prometheus
    spec:
      volumes:
        - name: volume-prometheus
          configMap:
            name: prometheus
      containers:
        - name: ose-prometheus
          image: >-
            registry.redhat.io/openshift4/ose-prometheus
          ports:
            - containerPort: 9090
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: volume-prometheus
              mountPath: /etc/prometheus
---
kind: Service
apiVersion: v1
metadata:
  name: ose-prometheus
  namespace: redhat-jboss-eap-cloud-ready-demo
  labels:
    app: ose-prometheus
spec:
  ports:
    - name: 9090-tcp
      protocol: TCP
      port: 9090
      targetPort: 9090
  selector:
    app: ose-prometheus
    deploymentconfig: ose-prometheus
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ose-prometheus
  namespace: redhat-jboss-eap-cloud-ready-demo
  labels:
    app: ose-prometheus
spec:
  to:
    kind: Service
    name: ose-prometheus
  port:
    targetPort: 9090-tcp
  wildcardPolicy: None
