weather-app-eap-cloud-ready/k8s/weather-app-eap-cloud-ready.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: weather-app-eap-cloud-ready
  namespace: redhat-jboss-eap-cloud-ready-demo
  labels:
    app: weather-app-eap-cloud-ready
    app.openshift.io/runtime: eap
spec:
  replicas: 1
  selector:
    app: weather-app-eap-cloud-ready
    deploymentconfig: weather-app-eap-cloud-ready
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: weather-app-eap-cloud-ready
        deploymentconfig: weather-app-eap-cloud-ready
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
    spec:
      containers:
        - resources: {}
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 9990
              scheme: HTTP
            initialDelaySeconds: 25
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          name: weather-app-eap-cloud-ready
          livenessProbe:
            httpGet:
              path: /health/live
              port: 9990
              scheme: HTTP
            initialDelaySeconds: 25
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8778
              protocol: TCP
          image: >-
            image-registry.openshift-image-registry.svc:5000/redhat-jboss-eap-cloud-ready-demo/weather-app-eap-cloud-ready
---
kind: Service
apiVersion: v1
metadata:
  name: weather-app-eap-cloud-ready
  namespace: redhat-jboss-eap-cloud-ready-demo
  labels:
    app: weather-app-eap-cloud-ready
spec:
  ports:
    - name: 9990-tcp
      protocol: TCP
      port: 9990
      targetPort: 9990
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
    - name: 8778-tcp
      protocol: TCP
      port: 8778
      targetPort: 8778
  selector:
    app: weather-app-eap-cloud-ready
    deploymentconfig: weather-app-eap-cloud-ready
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: weather-app-eap-cloud-ready
  namespace: redhat-jboss-eap-cloud-ready-demo
  labels:
    app: weather-app-eap-cloud-ready
spec:
  to:
    kind: Service
    name: weather-app-eap-cloud-ready
  port:
    targetPort: 8080
  wildcardPolicy: None
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: health
  namespace: redhat-jboss-eap-cloud-ready-demo
  labels:
    app: weather-app-eap-cloud-ready
spec:
  path: /health
  to:
    kind: Service
    name: weather-app-eap-cloud-ready
  port:
    targetPort: 9990
  wildcardPolicy: None
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: metric
  namespace: redhat-jboss-eap-cloud-ready-demo
  labels:
    app: weather-app-eap-cloud-ready
spec:
  path: /metrics
  to:
    kind: Service
    name: weather-app-eap-cloud-ready
  port:
    targetPort: 9990
  wildcardPolicy: None
